--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
+    "cpx": "1.5.0",
+    "elliptic": "^6.5.2",
     "express": "^4.17.1",
-    "mysql2": "^2.0.0",
-    "sequelize": "^5.21.2",
-    "app-root-path": "^3.0.0",
-    "winston": "^3.2.1",
-    "request-promise": "^4.2.5",
     "joi": "^12.0.0",
+    "mysql2": "^2.0.0",
+    "request-promise": "^4.2.5",
+    "sequelize": "^5.21.2",
+    "swagger": "^0.7.5",
+    "swagger-editor": "^3.7.1",
     "swagger-express-router": "1.0.0",
     "swagger-jsdoc": "1.9.7",
     "swagger-ui-express": "2.0.14",
-    "swagger": "^0.7.5",
-    "swagger-editor": "^3.7.1",
-    "cpx": "1.5.0"
+    "winston": "^3.2.1"
   }
 }
