--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "amqplib": "^0.5.5",
     "app-root-path": "^3.0.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
