--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cpx": "1.5.0",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "joi": "^12.0.0",
     "mysql2": "^2.0.0",
     "request-promise": "^4.2.5",
