--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "ip": "^1.1.5",
     "joi": "^12.0.0",
     "mysql2": "^2.0.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.2",
+    "socket.io": "^2.3.0",
     "swagger": "^0.7.5",
     "swagger-editor": "^3.7.1",
     "swagger-express-router": "1.0.0",
