--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "swagger-jsdoc": "1.9.7",
     "swagger-ui-express": "2.0.14",
     "uuid": "^3.4.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "socket.io": "^2.3.0"
   }
 }
