--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
     "joi": "^12.0.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
@@ -43,7 +44,6 @@
     "swagger-jsdoc": "1.9.7",
     "swagger-ui-express": "2.0.14",
     "uuid": "^3.4.0",
-    "winston": "^3.2.1",
-    "socket.io": "^2.3.0"
+    "winston": "^3.2.1"
   }
 }
